...
                        <variation key="heightClass=regular-widthClass=regular">
                            <mask key="constraints">
                                <include reference="j0R-yW-i88"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Questions" largeTitleDisplayMode="always" id="W7U-iU-dsD"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fBi-H2-UQm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-141" y="1075"/>
        </scene>
    </scenes>
...
